# ceda-github-python-library

./: LICENSE  template.yaml
github_content/: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  catalog-info.yaml  catalogue-info.yaml  pyproject.toml
github_content/${{values.module}}/: __init__.py  main.py
github_content/${{values.slug}}/: __init__.py  main.py
github_content/.github/workflows/: check.yml
github_content/.rename_github/workflows/: check.yml  publish.yml
github_content/docs/: conf.py  index.rst
github_content/tests/: __init__.py
github_content/tests/unit_tests/: __init__.py  test_main.py
