[tool.poetry]
name = "${{ values.slug }}"
version = "0.0.0dev0"
description = "${{ values.description }}"
authors = [
    "${{ values.gitAuthorName }}"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=${{ values.pythonVersions | first }},<=${{ values.pythonVersions | last }}"
pydantic-settings = "^2.3.4"
stac-pydantic = "^3.1.1"

[tool.poetry.group.black.dependencies]
black = "^24.4.2"
pre-commit = "^3.7.1"

[tool.poetry.group.mypy.dependencies]
mypy = "^1.10.1"
pre-commit = "^3.7.1"

[tool.poetry.group.bandit.dependencies]
bandit = "^1.7.9"
pre-commit = "^3.7.1"

[tool.poetry.group.ruff.dependencies]
ruff = "^0.5.2"
pre-commit = "^3.7.1"

[tool.poetry.group.isort.dependencies]
isort = "^5.13.2"
pre-commit = "^3.7.1"

[tool.poetry.group.xenon.dependencies]
xenon = "^0.9.1"
pre-commit = "^3.7.1"

[tool.poetry.group.test.dependencies]
coverage = { extras = ["toml"], version = "^7.6.0" }

[tool.poetry.group.docs.dependencies]
sphinx = "^7.4.7"
sphinx-autoapi = "^3.2.1"
sphinx-pydantic = "^0.1.1"
sphinx-rtd-theme = "^2.0.0"
sphinx-mdinclude = "^0.6.2"

[tool.mypy]
plugins = [
    "pydantic.mypy"
]
strict = ${{ values.strictTypeChecking }}
ignore_missing_imports = ${{ values.ignoreStrictImportChecking }}
python_version = "3.9"

[tool.isort]
profile = "black"

[tool.black]
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py39"

[tool.ruff.lint]
select = ${{ values.linterRules | dump }}

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = ${{ values.testCoverage }}

[tool.quality.mccabe]
average = "${{ values.mccabeCodeQualityAverage }}"
module = "${{ values.mccabeCodeQualityModule }}"
block = "${{ values.mccabeCodeQualityBlock }}"

[tool.bandit]
skips = ${{ values.banditSkips | dump }}

[tool.quality.audit]
ignore-code = ${{ values.dependencySkips | dump }}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"